--- a/index.html
+++ b/index.html
@@ -9,11 +9,84 @@
   </head>
   <body>
     <title>Alberto de la Cruz</title>
-<div id="center-box">
-    <div>
-        <!-- <p class="small-bold-text">Alberto de la Cruz</p> -->
-        <p class="bold-text">My name is Alberto de la Cruz. I produce mobile games that focus on fun and gratification.</p>
-        <p class="body-text">I'm the founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a> and a teacher at <a href="https://www.newschool.edu/parsons/" class="hyperlink">Parsons School of Design</a>. I build applications that are both fun and approachable, where every decision is driven by design and player satisfaction. Feel free to reach out to me on <a class="hyperlink" href="https://twitter.com/AlbertoToken">Twitter</a>.</p>
+<div class="main-container">
+    <div id="center-box">
+        <div>
+            <p class="small-bold-text">Alberto de la Cruz</p>
+            <p class="bold-text">I produce mobile games that focus on fun and gratification.</p>
+            <p class="body-text">I'm the founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a> and a teacher at <a href="https://www.newschool.edu/parsons/" class="hyperlink">Parsons School of Design</a>. I build applications that are both fun and approachable, where every decision is driven by design and player satisfaction. Feel free to reach out to me on <a class="hyperlink" href="https://twitter.com/AlbertoToken">Twitter</a>.</p>
+            <p class="body-text">I’m the founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a>&mdash;a mobile gaming studio. I also teach game and app design at <a href="https://www.newschool.edu/parsons/faculty/alberto-de-la-cruz/" class="hyperlink">Parsons School of Design</a> and mentor prospective UI/UX designers at <a class="hyperlink" href="https://trydesignlab.com/AlbertoToken/">Designlab</a>. I build applications that are both fun and approachable, where every decision is driven by design and player satisfaction. Prior to game design, I was the lead product designer at Stayawhile&mdash;in charge of their UI/UX and front-end development&mdash;and also served as a designer at several NYC tech startups. I believe game design is an iterative process, where communication and solving player needs are critical. I’m great at hitting tight deadlines by figuring out simple solutions to complex problems, cutting the right corners in the process. In my spare time I like playing <a class="hyperlink" href="https://en.m.wikipedia.org/wiki/Sixth_generation_of_video_game_consoles">sixth-generation video games</a>, reading manga, and drinking cold brew.</p>
+        </div>
+    </div>
+    <div class="flex-container">
+        <div class="title-cell">
+            <p class="small-bold-text">Gameography</p>
+        </div>
+        <div class="content-cell">
+            <p class="body-text">For each of these titles I led the development from concept to creation by serving as director, producer, art director, and designer.</p>
+            <p class="body-text">Train Drive 3D (Coming Soon)</p>
+            <p class="body-text">Reel Superstar (<a class="hyperlink" href="https://apps.apple.com/us/app/reel-superstar/id1548414930">iOS</a>)</p>
+            <p class="body-text">Sticky Tower! (<a class="hyperlink" href="https://apps.apple.com/us/app/sticky-tower/id1551845874">iOS</a>)</p>
+            <p class="body-text">Perfect Puppies (<a class="hyperlink" href="https://apps.apple.com/us/app/perfect-puppies/id1543736898">iOS</a>)</p>
+            <p class="body-text">You’re the President (<a class="hyperlink" href="https://apps.apple.com/us/app/youre-the-president/id1533099422">iOS</a>)</p>
+            <p class="body-text">Hyper Paparazzi (<a class="hyperlink" href="https://apps.apple.com/us/app/hyper-paparazzi/id1534518066">iOS</a>)</p>
+            <p class="body-text">Fallz.io (<a class="hyperlink" href="https://apps.apple.com/us/app/fallz-io/id1531781548">iOS</a>)</p>
+            <p class="body-text">Split and Run (<a class="hyperlink" href="https://apps.apple.com/us/app/split-and-run/id1495069778">iOS</a>/<a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.capricciohunt.game">Android</a>)</p>
+            <p class="body-text">Capriccio Hunt (<a class="hyperlink" href="https://apps.apple.com/us/app/capriccio-hunt/id1455842245?ls=1">iOS</a>/<a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.token.splitandrun">Android</a>)</p>
+            <p class="body-text">The Little Mermaid: Circus Escape (<a class="hyperlink" href="https://apps.apple.com/us/app/little-mermaid-circus-escape/id1418549141">iOS</a>)</p>
+            <p class="body-text">Jet Forest (<a class="hyperlink" href="https://fb.gg/play/278068732849668">Facebook Instant Games</a>)</p>
+            <p class="body-text">Arithmatic (<a class="hyperlink" href="https://apps.apple.com/us/app/arithmatic-master-your-mental-math/id1097565159">iOS</a>)</p>
+        </div>
+    </div>
+    <div class="flex-container">
+        <div class="title-cell">
+            <p class="small-bold-text">Writing</p>
+        </div>
+        <div class="content-cell">
+            <p class="body-text"><a class="hyperlink" href="https://medium.theuxblog.com/user-persona-development-guide-f62909bfdf8a">User Persona Development Guide</a></p>
+            <p class="body-text"><a class="hyperlink" href="https://medium.com/@albertodelacruz/typography-crash-course-simple-rules-for-typesetting-perfect-paragraphs-32e0623699a9">Typography Crash Course–Simple Rules for Typesetting Perfect Paragraphs</a></p>
+        </div>
+    </div>
+    <div class="flex-container">
+        <div class="title-cell">
+            <p class="small-bold-text">Public Speaking</p>
+        </div>
+        <div class="content-cell">
+            <p class="body-text"><a class="hyperlink" href="https://www.youtube.com/watch?v=U0Mb5N4Skc0&t">User Experience Design in Gaming, PAX East 2020</a></p>
+        </div>
+    </div>
+    <div class="flex-container">
+        <div class="title-cell">
+            <p class="small-bold-text">Press</p>
+        </div>
+        <div class="content-cell">
+            <p class="body-text"><a class="hyperlink" href="https://www.loversmagazine.com/interviews/alberto-de-la-cruz">Interview with Alberto de la Cruz, Lovers Magazine</a></p>
+            <p class="body-text"><a class="hyperlink" href="https://brutalistwebsites.com/albertogui.com/">Brutalist Websites</a></p>
+        </div>
+    </div>
+    <div class="flex-container">
+        <div class="title-cell">
+            <p class="small-bold-text">Miscellaneous</p>
+        </div>
+        <div class="content-cell">
+            <p class="body-text">A small collection of other projects I’ve created, sometimes for work and sometimes for fun.</p>
+            <p class="body-text">The Little Mermaid Storytime (<a class="hyperlink" href="https://apps.apple.com/us/app/the-little-mermaid-storytime/id1384512321?ls=1">iOS</a>/<a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.thelittlemermaid.storytime">Android</a>)</p>
+            <p class="body-text"><a class="hyperlink" href="https://apps.apple.com/us/app/creepypasta-stickers/id1299579002">Creepypasta Stickers</a></p>
+            <p class="body-text"><a class="hyperlink" href="https://www.dafont.com/golden-dragon.font">Golden Dragon Font Family</a></p>
+            <p class="body-text"><a class="hyperlink" href="https://cottonbureau.com/people/alberto-de-la-cruz">T-shirt Design</a></p>
+        </div>
+    </div>
+    <div class="flex-container">
+        <div class="title-cell">
+            <p class="small-bold-text">Social Media</p>
+        </div>
+        <div class="content-cell">
+            <p class="body-text">Feel free to reach out to me on any of these platforms.</p>
+            <p class="body-text"><a class="hyperlink" href="https://twitter.com/albertotoken">Twitter</a></p>
+            <p class="body-text"><a class="hyperlink" href="https://www.linkedin.com/in/albertotoken/">LinkedIn</a></p>
+            <p class="body-text"><a class="hyperlink" href="https://medium.com/@albertodelacruz">Medium</a></p>
+            <p class="body-text"><a class="hyperlink" href="https://dribbble.com/albertotoken">Dribbble</a></p>
+        </div>
     </div>
 </div>
   </body>
